Replace robot emoji with Honey Badger logo in AI feature card

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,9 @@
                         <p>Define how they unlock it: a simple photo, workout routine, daily tasks, or creative challenges.</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon">🤖</div>
+                        <div class="feature-icon-logo">
+                            <img src="/assets/honey-badger-logo.svg" alt="Honey Badger AI" class="feature-logo">
+                        </div>
                         <h3>AI Honey Badger Delivers</h3>
                         <p>Our persistent AI helper motivates and guides them through the challenge via text, email, and more.</p>
                     </div>
