Update HTML to use favicon.svg instead of deleted honey-badger-logo.svg

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="/assets/honey-badger-logo.svg" alt="Honey Badger Logo" class="logo-icon" id="headerLogo">
+                    <img src="/assets/favicon.svg" alt="Honey Badger Logo" class="logo-icon" id="headerLogo">
                     <span class="logo-text">HONEY BADGER</span>
                 </div>
                 <div class="nav-buttons">
@@ -28,7 +28,7 @@
         <div class="container">
             <section class="hero">
                 <div class="hero-logo">
-                    <img src="/assets/honey-badger-logo.svg" alt="Honey Badger" class="hero-logo-image">
+                    <img src="/assets/favicon.svg" alt="Honey Badger" class="hero-logo-image">
                 </div>
                 <h1>Hire a Honey Badger</h1>
                 <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon-logo">
-                            <img src="/assets/honey-badger-logo.svg" alt="Honey Badger AI" class="feature-logo">
+                            <img src="/assets/favicon.svg" alt="Honey Badger AI" class="feature-logo">
                         </div>
                         <h3>AI Honey Badger Delivers</h3>
                         <p>Our persistent AI helper motivates and guides them through the challenge via text, email, and more.</p>
@@ -104,7 +104,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('sendModal')">&times;</span>
             <div class="modal-header">
-                <img src="/assets/honey-badger-logo.svg" alt="Honey Badger" class="modal-logo">
+                <img src="/assets/favicon.svg" alt="Honey Badger" class="modal-logo">
                 <h2>Send a Honey Badger</h2>
             </div>
             <form id="sendForm">
