--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,10 @@
                     <img src="/assets/HB-logo.svg" alt="Honey Badger" class="hero-logo-image">
                 </div>
                 <h1>Hire a Honey Badger</h1>
+                <div class="tagline-spacer"></div>
                 <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
                 <div class="hero-buttons">
-                    <button class="btn-primary" onclick="showModal('sendModal')">Send Honey Badger</button>
+                    <button class="btn-primary enhanced-button" onclick="showModal('sendModal')">Send Honey Badger</button>
                 </div>
             </section>
 
@@ -52,7 +53,7 @@
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon-logo">
-                            <img src="/assets/HB-avatar.svg" alt="Honey Badger AI" class="feature-logo">
+                            <img src="/assets/HB-avatar.svg" alt="Honey Badger AI" class="feature-logo enhanced-avatar">
                         </div>
                         <h3>AI Honey Badger Delivers</h3>
                         <p>Our persistent AI helper motivates and guides them through the challenge via text, email, and more.</p>
@@ -104,7 +105,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('sendModal')">&times;</span>
             <div class="modal-header">
-                <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="modal-logo">
+                <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="modal-logo enhanced-modal-avatar">
                 <h2>Send a Honey Badger</h2>
             </div>
             <form id="sendForm">
@@ -169,7 +170,7 @@
                     </select>
                 </div>
                 
-                <button type="submit" class="btn-primary" style="width: 100%; margin-top: 1rem;">Send Honey Badger 🚀</button>
+                <button type="submit" class="btn-primary enhanced-button" style="width: 100%; margin-top: 1rem;">Send Honey Badger 🚀</button>
             </form>
         </div>
     </div>
