--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                 <div class="hero-logo">
                     <img src="/assets/HB-logo.svg" alt="Honey Badger" class="hero-logo-image">
                 </div>
-                <h1>Hire a Honey Badger</h1>
+                <h1>Honey Badgers for Hire</h1>
                 <div class="tagline-spacer"></div>
                 <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
                 <div class="hero-buttons">
