--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honey Badger - AI Gift Delivery</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/assets/Honey_badger_avatar.png" type="image/png">
     <link rel="alternate icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="/assets/HB-logo.svg" alt="Honey Badger Logo" class="logo-icon" id="headerLogo">
+                    <img src="/assets/Honey_badger_avatar.png" alt="Honey Badger Logo" class="logo-icon" id="headerLogo">
                     <span class="logo-text">HONEY BADGER</span>
                 </div>
                 <div class="nav-buttons">
@@ -28,7 +28,7 @@
         <div class="container">
             <section class="hero">
                 <div class="hero-logo">
-                    <img src="/assets/HB-logo.svg" alt="Honey Badger" class="hero-logo-image">
+                    <img src="/assets/Honey_badger_avatar.png" alt="Honey Badger" class="hero-logo-image">
                 </div>
                 <h1>Honey Badgers for Hire</h1>
                 <div class="tagline-spacer"></div>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon-logo">
-                            <img src="/assets/HB-avatar.svg" alt="Honey Badger AI" class="feature-logo enhanced-avatar">
+                            <img src="/assets/Honey_badger_avatar.png" alt="Honey Badger AI" class="feature-logo enhanced-avatar">
                         </div>
                         <h3>AI Honey Badger Delivers</h3>
                         <p>Our persistent AI helper motivates and guides them through the challenge via text, email, and more.</p>
@@ -105,7 +105,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('sendModal')">&times;</span>
             <div class="modal-header">
-                <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="modal-logo enhanced-modal-avatar">
+                <img src="/assets/Honey_badger_avatar.png" alt="Honey Badger" class="modal-logo enhanced-modal-avatar">
                 <h2>Send a Honey Badger</h2>
             </div>
             <form id="sendForm">
