Update header to use correct logo: hb-logo from assets folder

--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,6 @@
             height: 50px;
             object-fit: contain;
             filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.1));
-            border-radius: 50%;
-            background: rgba(243, 156, 18, 0.1);
-            padding: 5px;
         }
 
         .header-logo .logo-text {
@@ -349,7 +346,7 @@
     <div class="header">
         <div class="header-content">
             <div class="header-logo">
-                <img src="/assets/Honey_badger_avatar.png" alt="Honey Badger Logo" class="logo-icon">
+                <img src="/assets/hb-logo" alt="Honey Badger Logo" class="logo-icon">
                 <span class="logo-text">Honey Badger AI</span>
             </div>
         </div>
