Remove extra logos while keeping header, background, and hero logos

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,6 @@
                     <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
                     <div class="hero-buttons">
                         <button class="btn-primary" onclick="showCreateAccountFlow()">
-                            <img src="/assets/HB-avatar.svg" alt="" class="btn-icon">
                             Get Started - Create Account
                         </button>
                         <button class="btn btn-secondary" onclick="showModal('loginModal')" style="margin-left: 1rem;">Already have an account?</button>
@@ -44,10 +43,7 @@
                 </section>
 
                 <section class="features" id="features">
-                    <h2>
-                        <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="section-icon">
-                        How It Works
-                    </h2>
+                    <h2>How It Works</h2>
                     <div class="features-grid">
                         <div class="feature-card">
                             <div class="feature-icon">🎁</div>
@@ -60,9 +56,7 @@
                             <p>Define how they unlock it: a simple photo, workout routine, daily tasks, or creative challenges.</p>
                         </div>
                         <div class="feature-card">
-                            <div class="feature-icon-logo">
-                                <img src="/assets/HB-avatar.svg" alt="Honey Badger AI" class="feature-logo">
-                            </div>
+                            <div class="feature-icon">🤖</div>
                             <h3>AI Honey Badger Delivers</h3>
                             <p>Our persistent AI helper motivates and guides them through the challenge via text, email, and more.</p>
                         </div>
@@ -70,10 +64,7 @@
                 </section>
 
                 <section class="gift-cards">
-                    <h3>
-                        <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="section-icon-small">
-                        Supported Gift Cards
-                    </h3>
+                    <h3>Supported Gift Cards</h3>
                     <div class="gift-cards-grid">
                         <div class="gift-card">Dick's Sporting Goods</div>
                         <div class="gift-card">Fortnite</div>
@@ -85,15 +76,11 @@
                 </section>
 
                 <section class="examples">
-                    <h3>
-                        <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="section-icon-small">
-                        Real Examples
-                    </h3>
+                    <h3>Real Examples</h3>
                     
                     <div class="example-card">
                         <div class="example-header">
                             <h4>🎂 Birthday Surprise</h4>
-                            <img src="/assets/HB-avatar.svg" alt="HB" class="example-badge">
                         </div>
                         <p><strong>Gift:</strong> $100 Venmo Gift Card</p>
                         <p><strong>Challenge:</strong> Return a video saying hi and tell me your favorite ice cream</p>
@@ -103,7 +90,6 @@
                     <div class="example-card">
                         <div class="example-header">
                             <h4>🏃‍♂️ Fitness Motivation</h4>
-                            <img src="/assets/HB-avatar.svg" alt="HB" class="example-badge">
                         </div>
                         <p><strong>Gift:</strong> 3D Printer</p>
                         <p><strong>Challenge:</strong> Work out and make your bed for 60 days straight</p>
@@ -113,7 +99,6 @@
                     <div class="example-card">
                         <div class="example-header">
                             <h4>💕 Relationship Fun</h4>
-                            <img src="/assets/HB-avatar.svg" alt="HB" class="example-badge">
                         </div>
                         <p><strong>Gift:</strong> Special Photo</p>
                         <p><strong>Challenge:</strong> Do a load of laundry</p>
@@ -129,7 +114,6 @@
         <main>
             <div class="container">
                 <div class="dashboard-header">
-                    <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="dashboard-icon">
                     <h1>🍯 Your Honey Badger Dashboard</h1>
                     <p>Welcome back! Here's what's happening with your honey badgers.</p>
                 </div>
@@ -138,20 +122,14 @@
                     <!-- Left Panel - Recent Activity -->
                     <div class="dashboard-left">
                         <div class="activity-section">
-                            <h2>
-                                <img src="/assets/HB-avatar.svg" alt="HB" class="activity-icon">
-                                📤 Recently Sent
-                            </h2>
+                            <h2>📤 Recently Sent</h2>
                             <div id="sentBadgersList" class="badgers-list">
                                 <!-- Sent badgers will be populated here -->
                             </div>
                         </div>
 
                         <div class="activity-section">
-                            <h2>
-                                <img src="/assets/HB-avatar.svg" alt="HB" class="activity-icon">
-                                📥 Recently Received
-                            </h2>
+                            <h2>📥 Recently Received</h2>
                             <div id="receivedBadgersList" class="badgers-list">
                                 <!-- Received badgers will be populated here -->
                             </div>
@@ -162,7 +140,6 @@
                     <div class="dashboard-right">
                         <div class="send-panel">
                             <div class="send-header">
-                                <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="send-avatar">
                                 <div class="send-title">
                                     <h2>Send a Honey Badger</h2>
                                     <p class="send-subtitle">Deploy your AI motivator</p>
@@ -231,7 +208,6 @@
                                 </div>
                                 
                                 <button type="submit" class="btn-primary send-btn">
-                                    <img src="/assets/HB-avatar.svg" alt="" class="btn-icon">
                                     🚀 Send Honey Badger
                                 </button>
                             </form>
@@ -247,7 +223,6 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('loginModal')">&times;</span>
             <div class="modal-header">
-                <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="modal-logo">
                 <div class="modal-title">
                     <h2>Welcome Back!</h2>
                     <p class="modal-subtitle">Your Honey Badger awaits</p>
@@ -263,7 +238,6 @@
                     <input type="password" id="loginPassword" name="loginPassword" required placeholder="Enter your password">
                 </div>
                 <button type="submit" class="btn" style="width: 100%;">
-                    <img src="/assets/HB-avatar.svg" alt="" class="btn-icon-small">
                     Login
                 </button>
             </form>
@@ -279,7 +253,6 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('signupModal')">&times;</span>
             <div class="modal-header">
-                <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="modal-logo">
                 <div class="modal-title">
                     <h2>Join the Pack!</h2>
                     <p class="modal-subtitle">Unleash your AI gift companion</p>
@@ -308,7 +281,6 @@
                     <input type="password" id="confirmPassword" name="confirmPassword" required placeholder="Confirm your password">
                 </div>
                 <button type="submit" class="btn" style="width: 100%;">
-                    <img src="/assets/HB-avatar.svg" alt="" class="btn-icon-small">
                     Create Account
                 </button>
             </form>
