Consolidate buttons into single 'Send a Badger' button

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,9 @@
                     <span class="logo-text">HONEY BADGER</span>
                 </div>
                 <div class="nav-buttons">
-                    <button class="btn btn-secondary" onclick="showModal('loginModal')">Login</button>
-                    <button class="btn" onclick="showModal('signupModal')">Sign Up</button>
+                    <button class="btn-primary" onclick="showCreateAccountFlow()">
+                        Send a Badger
+                    </button>
                 </div>
             </div>
         </div>
@@ -36,9 +37,8 @@
                     <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
                     <div class="hero-buttons">
                         <button class="btn-primary" onclick="showCreateAccountFlow()">
-                            Get Started - Create Account
+                            Send a Badger
                         </button>
-                        <button class="btn btn-secondary" onclick="showModal('loginModal')" style="margin-left: 1rem;">Already have an account?</button>
                     </div>
                 </section>
 
