Update header and hero logos to use honey_badger.svg file

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="/assets/HB-avatar.svg" alt="Honey Badger Avatar" class="logo-icon" id="headerLogo">
+                    <img src="/assets/honey_badger.svg" alt="Honey Badger Avatar" class="logo-icon" id="headerLogo">
                     <span class="logo-text">HONEY BADGER</span>
                 </div>
                 <div class="nav-buttons">
@@ -31,7 +31,7 @@
             <div class="container">
                 <section class="hero">
                     <div class="hero-logo">
-                        <img src="/assets/HB-avatar.svg" alt="Honey Badger" class="hero-logo-image">
+                        <img src="/assets/honey_badger.svg" alt="Honey Badger" class="hero-logo-image">
                     </div>
                     <h1>Hire a Honey Badger</h1>
                     <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
