--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honey Badger - AI Gift Delivery</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/assets/favicon-new.svg" type="image/svg+xml">
-    <link rel="alternate icon" href="/assets/favicon-new.svg" type="image/x-icon">
+    <link rel="icon" href="/assets/honeycomb_badger.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="/assets/honeycomb_badger.svg" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="/assets/honey_badger.svg" alt="Honey Badger Avatar" class="logo-icon" id="headerLogo">
+                    <img src="/assets/honeycomb_badger.svg" alt="Honey Badger Avatar" class="logo-icon" id="headerLogo">
                     <span class="logo-text">HONEY BADGER</span>
                 </div>
                 <div class="nav-buttons">
@@ -31,7 +31,7 @@
             <div class="container">
                 <section class="hero">
                     <div class="hero-logo">
-                        <img src="/assets/honey_badger.svg" alt="Honey Badger" class="hero-logo-image">
+                        <img src="/assets/honeycomb_badger.svg" alt="Honey Badger" class="hero-logo-image">
                     </div>
                     <h1>Hire a Honey Badger</h1>
                     <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
