Add word carousel effect to hero heading

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,15 @@
                     <div class="hero-logo">
                         <img src="/assets/honeycomb_badger.svg" alt="Honey Badger" class="hero-logo-image">
                     </div>
-                    <h1>Hire a Honey Badger</h1>
+                    <h1 class="hero-heading">
+                        <span class="word-carousel">
+                            <span class="carousel-word active">Hire</span>
+                            <span class="carousel-word">Send</span>
+                            <span class="carousel-word">Unlock</span>
+                            <span class="carousel-word">Delight in</span>
+                        </span>
+                        <span class="fixed-text">a Honey Badger</span>
+                    </h1>
                     <p>Send AI-powered gift experiences that motivate, engage, and delight your loved ones</p>
                     <div class="hero-buttons">
                         <button class="btn-primary" onclick="showCreateAccountFlow()">
