Update to use honeycomb_badger2.svg and modify word carousel

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honey Badger - AI Gift Delivery</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/assets/honeycomb_badger.svg" type="image/svg+xml">
-    <link rel="alternate icon" href="/assets/honeycomb_badger.svg" type="image/x-icon">
+    <link rel="icon" href="/assets/honeycomb_badger2.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="/assets/honeycomb_badger2.svg" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="/assets/honeycomb_badger.svg" alt="Honey Badger Avatar" class="logo-icon" id="headerLogo">
+                    <img src="/assets/honeycomb_badger2.svg" alt="Honey Badger Avatar" class="logo-icon" id="headerLogo">
                     <span class="logo-text">HONEY BADGER</span>
                 </div>
                 <div class="nav-buttons">
@@ -31,14 +31,14 @@
             <div class="container">
                 <section class="hero">
                     <div class="hero-logo">
-                        <img src="/assets/honeycomb_badger.svg" alt="Honey Badger" class="hero-logo-image">
+                        <img src="/assets/honeycomb_badger2.svg" alt="Honey Badger" class="hero-logo-image">
                     </div>
                     <h1 class="hero-heading">
                         <span class="word-carousel">
                             <span class="carousel-word active">Hire</span>
                             <span class="carousel-word">Send</span>
                             <span class="carousel-word">Unlock</span>
-                            <span class="carousel-word">Delight in</span>
+                            <span class="carousel-word">Relish</span>
                         </span>
                         <span class="fixed-text">a Honey Badger</span>
                     </h1>
@@ -251,7 +251,7 @@
             </form>
             <p style="text-align: center; margin-top: 15px; color: #ccc;">
                 New to Honey Badger? 
-                <a href="#" onclick="closeModal('loginModal'); showModal('signupModal');" style="color: #ffeb3b; text-decoration: none;">Create your account</a>
+                <a href="#" onclick="closeModal('loginModal'); showModal('signupModal');" style="color: #E2FF00; text-decoration: none;">Create your account</a>
             </p>
         </div>
     </div>
@@ -294,7 +294,7 @@
             </form>
             <p style="text-align: center; margin-top: 15px; color: #ccc;">
                 Already have an account? 
-                <a href="#" onclick="closeModal('signupModal'); showModal('loginModal');" style="color: #ffeb3b; text-decoration: none;">Login here</a>
+                <a href="#" onclick="closeModal('signupModal'); showModal('loginModal');" style="color: #E2FF00; text-decoration: none;">Login here</a>
             </p>
         </div>
     </div>
