--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,7 @@
                     </div>
                     <h1 class="hero-heading">
                         <span class="word-carousel">
-                            <span class="carousel-word active">Hire</span>
-                            <span class="carousel-word">Send</span>
+                            <span class="carousel-word active">Send</span>
                             <span class="carousel-word">Unlock</span>
                             <span class="carousel-word">Relish</span>
                         </span>
