--- a/public/index.html
+++ b/public/index.html
@@ -54,18 +54,18 @@
                     <div class="features-grid">
                         <div class="feature-card">
                             <div class="feature-icon">🎁</div>
-                            <h3>Choose Your Gift</h3>
-                            <p>Select from gift cards, cash, photos, or custom messages. Set the perfect reward for your recipient.</p>
+                            <h3>Choose a Gift</h3>
+                            <p>Select from endless options including gift cards, cash, photos, or custom messages. Set the perfect reward for your recipient.</p>
                         </div>
                         <div class="feature-card">
                             <div class="feature-icon">🎯</div>
-                            <h3>Set the Challenge</h3>
+                            <h3>Set the Unlock</h3>
                             <p>Define how they unlock it: a simple photo, workout routine, daily tasks, or creative challenges.</p>
                         </div>
                         <div class="feature-card">
                             <div class="feature-icon">🤖</div>
-                            <h3>AI Honey Badger Delivers</h3>
-                            <p>Our persistent AI helper motivates and guides them through the challenge via text, email, and more.</p>
+                            <h3>Honey Badger Delivers</h3>
+                            <p>Our persistent Honey Badgers help motivate recipients to unlock gifts through the challenge via text, email, and more.</p>
                         </div>
                     </div>
                 </section>
