--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,9 @@
                     <h2>How It Works</h2>
                     <div class="features-grid">
                         <div class="feature-card">
-                            <div class="feature-icon">🎁</div>
+                            <div class="feature-icon">
+                                 <img src="/assets/honeycomb_badger_face.svg" alt="Honey Badger Avatar" class="logo-icon" id="bodyLogo">
+                            </div>
                             <h3>Choose a Gift</h3>
                             <p>Select from endless options including gift cards, cash, photos, or custom messages. Set the perfect reward for your recipient.</p>
                         </div>
