--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                     <div class="features-grid">
                         <div class="feature-card">
                             <div class="feature-icon">
-                                 <img src="/assets/honeycomb_badger_face.svg" alt="Honey Badger Avatar" class="logo-icon" id="bodyLogo">
+                                 <img src="/assets/Honey_badger_gift.jpg" alt="Honey Badger Gift" class="gift-icon" id="bodyGift">
                             </div>
                             <h3>Choose a Gift</h3>
                             <p>Select from endless options including gift cards, cash, photos, or custom messages. Set the perfect reward for your recipient.</p>
@@ -66,6 +66,7 @@
                         </div>
                         <div class="feature-card">
                             <div class="feature-icon">🤖</div>
+                            <img src="/assets/honeycomb_badger_face.svg" alt="Honey Badger Avatar" class="logo-icon" id="bodyLogo">
                             <h3>Honey Badger Delivers</h3>
                             <p>Our persistent Honey Badgers help motivate recipients to unlock gifts through the challenge via text, email, and more.</p>
                         </div>
