--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,9 @@
                             <p>Define how they unlock it: a simple photo, workout routine, daily tasks, or creative challenges.</p>
                         </div>
                         <div class="feature-card">
-                            <div class="feature-icon">🤖</div>
-                            <img src="/assets/honeycomb_badger_face.svg" alt="Honey Badger Avatar" class="logo-icon" id="bodyLogo">
+                            <div class="feature-icon">
+                             <img src="/assets/honeycomb_badger_face.svg" alt="Honey Badger Avatar" class="logo-icon" id="bodyLogo">
+                            </div>
                             <h3>Honey Badger Delivers</h3>
                             <p>Our persistent Honey Badgers help motivate recipients to unlock gifts through the challenge via text, email, and more.</p>
                         </div>
