--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                     <div class="features-grid">
                         <div class="feature-card">
                             <div class="feature-icon">
-                                 <img src="/assets/Honey_badger_gift.jpg" alt="Honey Badger Gift" class="gift-icon" id="bodyGift">
+                                 <img src="/assets/Honey_badger_gift.svg" alt="Honey Badger Gift" class="gift-icon" id="bodyGift">
                             </div>
                             <h3>Choose a Gift</h3>
                             <p>Select from endless options including gift cards, cash, photos, or custom messages. Set the perfect reward for your recipient.</p>
